--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.jpa.hibernate.ddl-auto = none
 
+spring.datasource.url = jdbc:sqlserver://localhost:1433;databaseName=StudentMarks;encrypt=true;trustServerCertificate=true;
+spring.datasource.username = sa
+spring.datasource.password=sys
+spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.show-sql=true
+spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2019Dialect
