--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.jpa.hibernate.ddl-auto = none
 
 
-spring.data.mongodb.uri=mongodb://localhost/systemPlaceReservation
+spring.data.mongodb.uri=mongodb://localhost/sprII
